# calm-puffer-art

./: .gitignore  README.md  findings_ledger.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  art_puffer_calm_synthesis.md  calm_domain_codec_result.md  calm_policy_adapter_result.md  controlled_art_ablation_result.md  readiness_gap_analysis.md  real_art_weight_update.md  real_art_weight_update_result.md  telemetry.md
examples/: adaptive_action_space_agent.py  adaptive_scheduler_agent.py  azure_foundry_codegen_ablation.py  chunk_encoder_smoke.py  code_domain_chunk_codec.py  codegen_semantic_sweep.py  controlled_art_ablation.py  counting_agent.py  foundry_harness_analyze.py  foundry_harness_batch.py  foundry_harness_compare.py  foundry_harness_run.py  live_art_bridge_smoke.py  objective_ablation.py  python_codegen_showcase.py  real_art_weight_update.py  real_workload_ablation.py  scalability_profile.py  sigil_workload_ablation.py  state_conditioned_chunk_policy.py  telemetry_report.py
harnesses/foundry/: baseline.json  frontier_baseline.json  (+14 more)
tests/: test_actions.py  test_art_adapter.py  test_calm_domain.py  test_calm_policy.py  test_chunk_encoder.py  test_codegen_semantic_sweep.py  test_controlled_art_ablation.py  test_foundry_codegen.py  test_foundry_harness.py  test_live_art_bridge_smoke.py  test_objective_ablation.py  test_python_codegen_showcase.py  test_real_art_weight_update.py  test_real_workload_ablation.py  test_runtime.py  test_scalability.py  test_scheduler.py  test_sigil_ablation.py  test_sigil_integration.py  test_telemetry.py
(+18 files in other folders)
