[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "calm-puffer-art"
version = "0.1.0"
description = "ART-shaped language-agent RL control plane with Puffer-like rollout production and CALM-like action bandwidth abstractions."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Calm Puffer ART contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]
calm = ["numpy>=1.26", "torch>=2"]
art = ["openpipe-art>=0.4.9"]
foundry = ["openai>=1.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
